--- a/index.html
+++ b/index.html
@@ -3,12 +3,128 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Diogo Eichert</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Merriweather&family=Montserrat:wght@400;600&family=Mooli&display=swap"
+      rel="stylesheet"
+    />
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link
       rel="stylesheet"
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Diogo Eichert</title>
   </head>
-  <body></body>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-custom"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Diogo Eichert</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="games.html">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="publications.html">Publications</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="recomendations.html">Recomendations</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1>Diogo Eichert</h1>
+    <h3>professional technologist, welcomes you to his home page.</h3>
+    <div class="information-buttons">
+      <a href="#" class="primary-button">Contact me</a>
+      <a href="about.html" class="secondary-button">About me</a>
+    </div>
+    <div class="container">
+      <div class="row flex">
+        <div class="col-6">
+          <img
+            src="images/gamelight.png"
+            class="img-fluid rounded-circle shadow-sm p-1"
+            alt="games"
+          />
+        </div>
+        <div class="col-6">
+          <h2 class="app-title-right">Games</h2>
+          <p class="app-description-right">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+            officiis provident exercitationem iure ratione nulla tempore,
+            similique modi sapiente sequi voluptatibus impedit quo ut dolor
+            obcaecati recusandae veniam ea quis?
+          </p>
+          <div class="information-button left">
+            <a href="index.html" class="primary-button">Games</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <h2 class="app-title-left">Projects</h2>
+          <p class="app-description-left">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+            officiis provident exercitationem iure ratione nulla tempore,
+            similique modi sapiente sequi voluptatibus impedit quo ut dolor
+            obcaecati recusandae veniam ea quis?
+          </p>
+          <div class="information-button right">
+            <a href="index.html" class="primary-button">Projects</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img
+            src="images/projectlight.png"
+            class="img-fluid rounded-circle shadow-sm p-2"
+            alt="weather-app"
+          />
+        </div>
+      </div>
+      <div class="row flex">
+        <div class="col-6">
+          <img
+            src="images/publilight.png"
+            class="img-fluid rounded-circle shadow-sm p-2"
+            alt="world-clock"
+          />
+        </div>
+        <div class="col-6">
+          <h2 class="app-title-right">Publications</h2>
+          <p class="app-description-right">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+            officiis provident exercitationem iure ratione nulla tempore,
+            similique modi sapiente sequi voluptatibus impedit quo ut dolor
+            obcaecati recusandae veniam ea quis?
+          </p>
+          <div class="information-button left">
+            <a href="index.html" class="primary-button">Publications</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
